--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       font-family: 'BadComic';
       src: url('BadComic-Regular.ttf') format('truetype');
     }
-
     body {
       font-family: 'BadComic', sans-serif;
       background: #fef8e7 url('SplashScreen.png') no-repeat top center;
@@ -18,46 +17,40 @@
       color: #2e2e2e;
       line-height: 1.6;
     }
-
     .container {
-      background-color: rgba(255, 255, 255, 0.9);
-      max-width: 700px;
+      background-color: rgba(255, 255, 255, 0.95);
+      max-width: 720px;
       margin: auto;
       padding: 2rem;
       border-radius: 20px;
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
     }
-
     h1, h2 {
       text-align: center;
       color: #3a683b;
     }
-
     h1 {
       font-size: 2.2rem;
       margin-bottom: 1rem;
     }
-
     h2 {
-      font-size: 1.5rem;
+      font-size: 1.4rem;
       margin-top: 2rem;
     }
-
     p {
       margin: 1rem 0;
     }
-
     .logo {
       display: block;
       margin: 0 auto 2rem;
       max-width: 300px;
     }
-
     .footer {
       text-align: center;
       font-size: 0.9rem;
       margin-top: 3rem;
     }
+    a { color: #005f5f; }
   </style>
 </head>
 <body>
@@ -65,27 +58,34 @@
     <img src="LGFRE.png" alt="Logo A Fantástica Árvore" class="logo">
 
     <h1>Política de Privacidade</h1>
-    <p>Este aplicativo foi desenvolvido com foco no público infantil e tem como prioridade garantir a segurança e a privacidade dos usuários.</p>
 
-    <h2>1. Coleta de Informações</h2>
-    <p>O aplicativo <strong>A Fantástica Árvore – A Lagartixa</strong> não coleta, armazena ou compartilha qualquer informação pessoal dos usuários.</p>
+    <p><strong>Última atualização:</strong> 16 de junho de 2025</p>
 
-    <h2>2. Cookies e Rastreamento</h2>
-    <p>O aplicativo não utiliza cookies ou qualquer ferramenta de rastreamento automático de dados.</p>
+    <h2>1. Informações Gerais</h2>
+    <p>O aplicativo <strong>Lalo e a Fantástica Árvore</strong> foi desenvolvido especialmente para o público infantil e segue todas as diretrizes da Google Play, incluindo o programa <strong>Designed for Families</strong>.</p>
+
+    <h2>2. Coleta de Dados</h2>
+    <p>Este aplicativo <strong>não coleta</strong> nenhum tipo de dado pessoal, identificável ou sensível. Não há necessidade de criação de contas, login, nem uso de localização.</p>
 
     <h2>3. Compartilhamento de Dados</h2>
-    <p>Como não há coleta de dados, nenhuma informação é compartilhada com terceiros.</p>
+    <p>Como não há coleta de dados, <strong>nenhuma informação é compartilhada com terceiros</strong>.</p>
 
-    <h2>4. Segurança Infantil</h2>
-    <p>Este aplicativo é totalmente seguro para o público infantil, não apresenta publicidade de terceiros e pode ser usado offline.</p>
+    <h2>4. Cookies e Rastreamento</h2>
+    <p>Não utilizamos cookies, rastreamento, nem bibliotecas de terceiros que coletam dados.</p>
 
-    <h2>5. Contato</h2>
-    <p>Em caso de dúvidas, entre em contato pelo e-mail: <a href="mailto:henrique.dinar@gmail.com">henrique.dinar@gmail.com</a></p>
+    <h2>5. Anúncios</h2>
+    <p><strong>Este aplicativo não exibe anúncios.</strong> Ele foi desenvolvido exclusivamente para fins educativos e de entretenimento infantil.</p>
 
-    <h2>6. Alterações na Política</h2>
-    <p>Esta política poderá ser atualizada conforme necessário. Mudanças significativas serão informadas na descrição do aplicativo.</p>
+    <h2>6. Segurança para Crianças</h2>
+    <p>Todo o conteúdo é apropriado para crianças de até 6 anos. O app pode ser usado sem conexão com a internet, e não possui áreas ocultas ou acessos externos.</p>
 
-    <p class="footer">Última atualização: 16 de junho de 2025</p>
+    <h2>7. Conformidade com a Lei</h2>
+    <p>Este aplicativo está em conformidade com a <strong>Lei Geral de Proteção de Dados Pessoais (LGPD)</strong> no Brasil, bem como com as exigências da <strong>Google Play para apps infantis</strong>.</p>
+
+    <h2>8. Contato</h2>
+    <p>Se você tiver qualquer dúvida sobre esta política, pode entrar em contato pelo e-mail: <a href=\"mailto:henrique.dinar@gmail.com\">henrique.dinar@gmail.com</a></p>
+
+    <p class=\"footer\">© 2025 A Fantástica Árvore • Desenvolvido com apoio da Lei Aldir Blanc</p>
   </div>
 </body>
 </html>
